Added otp code sending part
